@startuml

package View {
    component Screen
    component Component
}

package ViewModel {
    agent ServiceViewModel
    agent AccountViewModel
}

package Repository {
    interface ServiceRepository
    interface AccountRepository
}

package Model {
    entity Service
    entity Account
}

package Database {
    database SQLite {
        storage services
        storage accounts
    }
}

View --> ViewModel
ViewModel --> Repository
Repository --> Model
Model --> Database

@enduml